--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@ local.properties
 captures/
 .externalNativeBuild/
 .cxx/
-*.apk
 output.json
+output-metadata.json
+.navigation
 
 # IntelliJ
 *.iml
@@ -31,3 +32,32 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+#built application files
+*.apk
+*.arr
+*.ap_
+*.aab
+
+#NDK
+obj/
+.externalNativeBuild
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+out/
+# Uncomment the following line in case you need and you don't have the release build type files in your app
+# release/
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
